--- a/oshop/client/src/app/app.component.html
+++ b/oshop/client/src/app/app.component.html
@@ -1,8 +1,15 @@
-<h1>Welcome to {{title}}</h1>
+<app-nav-bar></app-nav-bar>
 
-<span>
-<i class="fad fa-broadcast-tower"></i>
 
-</span>
+<div class="container" style="margin-top: 140px;">
+  <h1>Welcome to {{title}}</h1>
+
+ <ul>
+   <li class="list-unstyled" *ngFor="let product of products">{{product.name}}</li>
+ </ul>
+</div>
+
+
+
 
 
