adding rouing and lazyloading in client

--- a/oshop/client/src/app/core/nav-bar/nav-bar.component.css
+++ b/oshop/client/src/app/core/nav-bar/nav-bar.component.css
@@ -10,3 +10,20 @@
   background: blue;
   border-radius: 50%;
 }
+
+a{
+  text-decoration: none;
+  color:#343a40;
+}
+
+a.active {
+  color:orange;
+}
+
+.logo {
+  cursor: pointer;
+}
+.logo:focus{
+  outline: none;
+}
+
