--- a/oshop/client/src/app/shop/product-item/product-item.component.html
+++ b/oshop/client/src/app/shop/product-item/product-item.component.html
@@ -2,14 +2,14 @@
     <img src="{{Product.pictureUrl}}" alt="{{Product.name}}" class="img-fluid bg-light">
 
   <div class="card-body d-flex flex-column">
-      <a href="#">
+      <a routerLink="/shop/{{Product.id}}">
          <h6 class="text-uppercase">{{Product.name}}</h6>
       </a>
       <span class="mb-2">{{Product.price| currency}}</span>
 
       <div class="btn-group mt-auto">
         <button type="button" class="btn  btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-        <button type="button" class="btn  btn-outline-secondary">View</button>
+        <button routerLink="/shop/{{Product.id}}" type="button" class="btn  btn-outline-secondary">View</button>
       </div>
 
     </div>
