--- a/oshop/client/src/app/app.component.html
+++ b/oshop/client/src/app/app.component.html
@@ -1,11 +1,13 @@
+<ngx-spinner>loading...</ngx-spinner>
 <app-nav-bar></app-nav-bar>
 
-
-<div class="container" style="margin-top: 140px;">
+<app-section-header></app-section-header>
+<div class="container">
 
    <router-outlet></router-outlet>
 
 </div>
+
 
 
 
