--- a/oshop/client/src/app/shop/product-item/product-item.component.html
+++ b/oshop/client/src/app/shop/product-item/product-item.component.html
@@ -1,5 +1,12 @@
 <div class="card h-100 shadow-sm">
-    <img src="{{Product.pictureUrl}}" alt="{{Product.name}}" class="img-fluid bg-light">
+    <div class="image position-relative" style="cursor: pointer;">
+     <img src="{{Product.pictureUrl}}" alt="{{Product.name}}" class="img-fluid bg-light">
+     <div class="d-flex align-items-center justify-content-center hover-overlay">
+          <button type="button" class="btn  btn-primary fa fa-shopping-cart mr-2"></button>
+          <button routerLink="/shop/{{Product.id}}" type="button" class="btn  btn-primary">View</button>
+
+     </div>
+    </div>
 
   <div class="card-body d-flex flex-column">
       <a routerLink="/shop/{{Product.id}}">
@@ -7,10 +14,7 @@
       </a>
       <span class="mb-2">{{Product.price| currency}}</span>
 
-      <div class="btn-group mt-auto">
-        <button type="button" class="btn  btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-        <button routerLink="/shop/{{Product.id}}" type="button" class="btn  btn-outline-secondary">View</button>
-      </div>
+
 
     </div>
   </div>
