--- a/oshop/client/src/app/shop/shop.component.html
+++ b/oshop/client/src/app/shop/shop.component.html
@@ -1,10 +1,11 @@
-<div class="container">
+<div class="container mt-5">
 
    <div class="row">
      <section class="col-3">
-         <h5 class="text-warning my-3">Sort</h5>
-         <select class="custom-select my-3" (change)="onSortSelected($event)">
-           <option *ngFor="let sort of sortOptions"
+            <ng-container *ngIf="types && brands">
+             <h5 class="text-warning my-3">Sort</h5>
+             <select class="custom-select my-3" (change)="onSortSelected($event)">
+            <option *ngFor="let sort of sortOptions"
             [value]="sort.value">{{sort.name}}</option>
 
          </select>
@@ -27,7 +28,7 @@
                                           [value]="type.id"
                                           (click)="onTypeSelected(type.id)">{{type.name}}</li>
           </ul>
-
+       </ng-container>
      </section>
      <section class="col-9">
          <div class="d-flex justify-content-between align-items-center pb-2">
@@ -38,7 +39,7 @@
                                   [totalCount]="this.totalCount" ></app-paging-header>
 
 
-            <div class="form-inline mt-2">
+            <div class="form-inline mt-2" *ngIf="products">
               <input (keyup.enter)="onSearch()" type="text" class="form-control mr-2" #search style="width: 300px" placeholder="Search">
               <button class="btn btn-outline-primary my-2" (click)="onSearch()">Search</button>
               <button class="btn btn-outline-success ml-2 my-2" (click)="onRest()">Rest</button>
