--- a/oshop/client/src/app/shop/product-item/product-item.component.html
+++ b/oshop/client/src/app/shop/product-item/product-item.component.html
@@ -2,7 +2,7 @@
     <div class="image position-relative" style="cursor: pointer;">
      <img src="{{Product.pictureUrl}}" alt="{{Product.name}}" class="img-fluid bg-light">
      <div class="d-flex align-items-center justify-content-center hover-overlay">
-          <button type="button" class="btn  btn-primary fa fa-shopping-cart mr-2"></button>
+          <button  (click)="addItemToBasket()" type="button" class="btn  btn-primary fa fa-shopping-cart mr-2"></button>
           <button routerLink="/shop/{{Product.id}}" type="button" class="btn  btn-primary">View</button>
 
      </div>
